--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
 sources:
   apache-maven-3.1.1-src.tar.gz: dd03e623eaed59407947773472235147dbec420c
+  apache-maven-3.2.3-src.tar.gz: 859ea5122561fec89ee14a11ad5251c636f8c04f
