--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
 sources:
   apache-maven-3.2.5-src.tar.gz: 9d1c873fb7ed6990a7005383926fc8db7fc59190
+  apache-maven-3.5.2-src.tar.gz: 97d6d7b18485b7906dd7f313cdd41191d16dde46
